Added a start for the server and working on the DB feature

--- a/the-vipers-cove/src/app/login/login.component.html
+++ b/the-vipers-cove/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="login">
     <div class="login-container">
         <span class="login-container_title">Login</span>
-        <span>Username:</span><input class="login-container_input" type="text" name="username">
-        <span>password:</span><input class="login-container_input" type="password" name="password">
+        <span class="login-container_text">Username:</span><input class="login-container_input username" type="text" name="username">
+        <span class="login-container_text">password:</span><input class="login-container_input" type="password" name="password">
         <button type="submit" name="submit">submit</button>
     </div>
 </div>
