--- a/the-vipers-cove/src/app/login/login.component.scss
+++ b/the-vipers-cove/src/app/login/login.component.scss
@@ -4,7 +4,7 @@
     align-items: center;
     height: 100vh;
     width: 100vw;
-    background-color: #EEE;
+    background-color: #223;
     &-container {
         display: flex;
         flex-direction: column;
@@ -13,13 +13,22 @@
         height: 40vh;
         width: 40vh;
         background-color: #FFF;
-        border: 1px solid #000;
-        border-radius: 2vh;
+        border: 2px solid #fb7c00;
+        border-radius: 1vh;
         &_title {
-            font-size: 2em;
+            font-family: Overwatch;
+            font-size: 5em;
+        }
+        &_text {
+            font-size: 1.5em;
         }
         &_input {
-            border-radius: 2vh;
+            font-size: 1.2em;
+            border-radius: 1vh;
+            width: 60%;
+        }
+        & .username {
+            font-family: OverwatchText;
         }
     }
 }
