--- a/the-vipers-cove/src/styles.scss
+++ b/the-vipers-cove/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: "Overwatch";
+    src: url("./assets/fonts/bignoodletoo.woff") format('woff');
+}
+@font-face {
+    font-family: "OverwatchText";
+    src: url("./assets/fonts/big_noodle_tilting.ttf") format('truetype');
+}
