added header and other components viable to login and register

--- a/the-vipers-cove/src/styles.scss
+++ b/the-vipers-cove/src/styles.scss
@@ -6,3 +6,8 @@
     font-family: "OverwatchText";
     src: url("./assets/fonts/big_noodle_tilting.ttf") format('truetype');
 }
+body {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+}
