--- a/the-vipers-cove/src/app/components/login/login.component.scss
+++ b/the-vipers-cove/src/app/components/login/login.component.scss
@@ -2,16 +2,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     background-color: #223;
     &-container {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: 40vh;
-        width: 40vh;
+        height: 40%;
+        width: 40%;
         background-color: #FFF;
         border: 2px solid #fb7c00;
         border-radius: 1vh;
