--- a/the-vipers-cove/src/app/components/login/login.component.scss
+++ b/the-vipers-cove/src/app/components/login/login.component.scss
@@ -1,34 +1,47 @@
+@import "../../../assets/colors.scss";
 .login {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
     width: 100%;
     background-color: #223;
+    &_title {
+        font-family: Overwatch;
+        color: $OWorange;
+        font-size: 5em;
+    }
     &-container {
         display: flex;
-        flex-direction: column;
         justify-content: center;
-        align-items: center;
-        height: 40%;
+        min-width: 400px;
         width: 40%;
         background-color: #FFF;
-        border: 2px solid #fb7c00;
+        border: 2px solid $OWorange;
         border-radius: 1vh;
-        &_title {
-            font-family: Overwatch;
-            font-size: 5em;
+
+        .login-subcontainer {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 60%;
+        }
+        .form-group {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
         }
         &_text {
+            align-self: flex-start;
             font-size: 1.5em;
         }
         &_input {
             font-size: 1.2em;
             border-radius: 1vh;
-            width: 60%;
-        }
-        & .username {
-            font-family: OverwatchText;
+            width: 100%;
         }
     }
 }
