--- a/the-vipers-cove/src/app/components/register/register.component.html
+++ b/the-vipers-cove/src/app/components/register/register.component.html
@@ -1,3 +1,28 @@
-<p>
-  register works!
-</p>
+<div class="register">
+    <span class="register_title">register</span>
+    <div class="register-container">
+        <form (submit)="onRegisterSubmit()" class="register-subcontainer">
+            <div class="form-group">
+                <label class="register-container_text">Name:</label>
+                <input class="register-container_input text-font " type="text" [(ngModel)]="name" name="name">
+            </div>
+            <div class="form-group">
+                <label class="register-container_text">Username:</label>
+                <input class="register-container_input text-font " type="text" [(ngModel)]="username" name="username">
+            </div>
+            <div class="form-group">
+                <label class="register-container_text">Email:</label>
+                <input class="register-container_input text-font " type="email" [(ngModel)]="email" name="email">
+            </div>
+            <div class="form-group">
+                <label class="register-container_text">Password:</label>
+                <input class="register-container_input" type="password" [(ngModel)]="password" name="password">
+            </div>
+            <div class="form-group">
+                <label class="register-container_text">Confirm Password:</label>
+                <input class="register-container_input" type="password" [(ngModel)]="confirm" name="confirm">
+            </div>
+            <input type="submit" name="submit" value="Register">
+        </form>
+    </div>
+</div>
